prevent scrolling off screen horizontally

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body { 
+  overflow-x: hidden;
+}
+
 #menu-toggle {
   color: #fff;
   font-size: 3.125rem;
